--- a/.gitignore
+++ b/.gitignore
@@ -395,3 +395,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio
+/Les6_dism_test/testDisAsm
+/testDism
